# ecommerce_rest

./: .gitignore  pyproject.toml
apps/base/: api.py  models.py
apps/products/: models.py  urls.py
apps/products/api/serializers/: general_serializers.py  product_serializers.py
apps/products/migrations/: 0001_initial.py  0002_remove_categoryproduct_measure_unit_and_more.py
apps/products/views/: general_views.py  product_views.py
apps/users/: models.py
apps/users/api/: api.py  serializers.py  urls.py
apps/users/migrations/: 0001_initial.py
ecommerce_rest/: urls.py
ecommerce_rest/settings/: base.py  local.py  production.py
