[tool.poetry]
name = "ecommerce-rest"
version = "0.1.0"
description = ""
authors = ["Gerson Vizquel <aituring.app@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
djangorestframework = "^3.14.0"
django = "^4.2.7"
django-simple-history = "^3.4.0"
pillow = "^10.1.0"
numpy = "^1.26.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
